# course-project-option-2-aitechroberts

./: .gitattributes  Dockerfile  README.md  app.yaml  cloud-sql-proxy.sh  kaggle.json  project-setup.md  project.ipynb  test_cloudsql_connection.py
.github/workflows/: workflow.yaml
data/: test30.csv  train70.csv
k8s/: deployment.yaml
systool-app/: README.md  pyproject.toml
systool-app/systool_app/: app.py  dev.ipynb  pyspark_jobs.py  systool-436201-182bb07f2431.json
